--- a/assets/lotion-lp.css
+++ b/assets/lotion-lp.css
@@ -30,3 +30,42 @@
 .header__link:hover::before {
   width: 100%;
 }
+
+/* HERO CSS */
+.hero {
+  margin-block: 80px 50px;
+}
+
+.hero__content {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.hero__eyebrow {
+  color: var(--highlight);
+}
+
+.hero__title {
+  font-size: 2.5rem;
+  max-width: 30ch;
+  margin-block: 0.2em 0.5em;
+}
+
+.hero__description {
+  max-width: 55ch;
+  margin-block-end: 2em;
+}
+
+.hero__button {
+  background: var(--accent);
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  padding: 1em 2em;
+  text-transform: uppercase;
+}
+
+.hero__image {
+  border-radius: 4px;
+}
