--- a/assets/lotion-lp.css
+++ b/assets/lotion-lp.css
@@ -127,3 +127,38 @@
   padding: 1em 2em;
   text-transform: uppercase;
 }
+
+/* FOOTER CSS */
+.footer {
+  background: var(--secondary-background);
+  color: var(--secondary-text);
+}
+
+.footer__content {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, auto);
+  gap: 50px;
+  margin-block-start: 100px;
+  padding-block: 2em;
+}
+
+.footer__title {
+  font-size: 2rem;
+  margin-block-end: 0.5em;
+}
+
+.footer__list {
+  display: grid;
+  gap: 10px;
+}
+
+.footer__link {
+  color: var(--footer-link);
+  padding-block: 0.4em;
+  transition: color 0.5s ease;
+}
+
+.footer__link:hover {
+  color: var(--accent);
+}
